feat: improve activity, banking, and currency support
